--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,76 +6,63 @@
     font-family: 'Gill Sans', sans-serif;
 }
 
-.body{
+body{
     display: grid;
-    grid-template-rows: 15% 60% 25%;
-    height: 100vw; /*Почему когда разворачиваешь на весь экран, футтер уезжает вниз хотя высота 100vw?*/
-    
+    grid-template-rows: 150px 1fr 250px;
+    grid-template-columns: 1fr 350px;
+    height: 100vh;
 }
 
 header{
-    grid-row: 1/2;
     background-color: grey;
-    display: grid;
-}
-
-header p{
-    justify-self: center;
-    align-self: center;
+    grid-column: 1/ -1;
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
 
 main{
-    display: grid;
-    grid-template-columns:1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-row: 2/3;
-}
-
-/*
-.container{
     background-color: beige;
-    grid-column: 1/3;
-    grid-row: 1/4;
+    grid-column:1;
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr;
-}*/
+    grid-template-rows: 1fr 100px 100px;
+    gap: 10px;
 
-.box-1{
-    background-color: beige;
-    grid-area: 1/ 1/ 2/ 3;
 }
 
-.box-2-1{
-    background-color: beige;
-    grid-area: 2/ 1/ 3/  2;
+.box1, .box4{
+    grid-column: 1/ -1;
 }
 
-.box-2-2{
-    background-color: beige;
-    grid-area: 2/ 2/ 3/ 3;
+.box1{
+    display: flex;
+    justify-content: center;
+    padding-top: 50px;
 }
 
-.box-3{
-    background-color: beige;
-    grid-area: 3/ 1/ 4/ 3;
+.box2, .box3, .box4{
+    background-color: burlywood;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
 }
 
 .box-aside{
     background-color: aquamarine;
-    grid-area: 1/ 3 / 4/ 4;
     display: grid;
     justify-items: center;
 }
 
 .box-aside p{
-    padding-top: 70px;
+    padding-top: 50px;
 } 
 
 footer{
     background-color: grey;
+    grid-column: 1/ -1;
     display: grid;
-    grid-row: 3/4;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-items: center;
     align-items: center;
