--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2,33 +2,38 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-size: 18px;
+    font-size: 1em;
     font-family: 'Gill Sans', sans-serif;
 }
 
 body{
-    display: grid;
-    grid-template-rows: 150px 1fr 250px;
-    grid-template-columns: 1fr 350px;
-    height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
 
 header{
     background-color: grey;
-    grid-column: 1/ -1;
+    width: 100%;
     display:flex;
+    height: 100px;
     justify-content: center;
     align-items: center;
 }
 
+.wrapper{
+    display: grid;
+    flex-grow: 1;
+    width: 100%;
+    min-height: 70vh;
+    grid-template-columns: 2fr 1fr;
+}
+
 main{
     background-color: beige;
-    grid-column:1;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 100px 100px;
-    gap: 10px;
-
+    grid-template-rows: 1fr 1fr 1fr;
 }
 
 .box1, .box4{
@@ -57,13 +62,19 @@ main{
 
 .box-aside p{
     padding-top: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: center;
 } 
 
 footer{
+    width: 100%;
     background-color: grey;
-    grid-column: 1/ -1;
+    min-height: 250px;
+    max-height: 1000px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr) );
+    row-gap: 30px;
     justify-items: center;
     align-items: center;
 }
