--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,10 +6,14 @@
     font-family: 'Gill Sans', sans-serif;
 }
 
+html{
+    height: 100%;
+}
+
 body{
     height: 100%;
     display: grid;
-    grid-template: 100px 50% minmax(250px, 600px) / 1fr;
+    grid-template: 100px 1fr minmax(min-content max-content) / 1fr;
 }
 
 header{
@@ -62,13 +66,13 @@ main{
 footer{
     background-color: grey;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr) );
-    row-gap: 5px;
-    justify-items: center;
-    align-items: center;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 16px;
+    padding: 16px;
 }
 
 .footer-box{
     padding: 30px;
     background-color: rgb(221, 221, 221);
+    text-align: center;
 }
